WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213437
RecoveryOS: PAL::getAVPlayerLayerClass() will crash when AVFoundation is missing
https://bugs.webkit.org/show_bug.cgi?id=213437
Summary
RecoveryOS: PAL::getAVPlayerLayerClass() will crash when AVFoundation is missing
Jer Noble
Reported
2020-06-20 14:00:00 PDT
RecoveryOS: PAL::getAVPlayerLayerClass() will crash when AVFoundation is missing
Attachments
Patch
(6.20 KB, patch)
2020-06-20 14:04 PDT
,
Jer Noble
eric.carlson
: review+
Details
Formatted Diff
Diff
Patch for landing
(6.19 KB, patch)
2020-06-20 18:00 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-06-20 14:02:15 PDT
<
rdar://problem/64563064
>
Jer Noble
Comment 2
2020-06-20 14:04:16 PDT
Created
attachment 402401
[details]
Patch
Peng Liu
Comment 3
2020-06-20 14:18:51 PDT
Comment on
attachment 402401
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=402401&action=review
> Source/WebCore/platform/graphics/ca/cocoa/PlatformCALayerCocoa.mm:1281 > + if (PAL::isAVFoundationFrameworkAvailable())
Seems incorrect?
Eric Carlson
Comment 4
2020-06-20 14:46:46 PDT
Comment on
attachment 402401
[details]
Patch r=me with the issue Peng point out changed
Jer Noble
Comment 5
2020-06-20 18:00:53 PDT
Created
attachment 402411
[details]
Patch for landing
Jer Noble
Comment 6
2020-06-20 18:11:02 PDT
(In reply to Peng Liu from
comment #3
)
> Comment on
attachment 402401
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=402401&action=review
> > > Source/WebCore/platform/graphics/ca/cocoa/PlatformCALayerCocoa.mm:1281 > > + if (PAL::isAVFoundationFrameworkAvailable()) > > Seems incorrect?
Good catch!
EWS
Comment 7
2020-06-20 19:49:31 PDT
Committed
r263323
: <
https://trac.webkit.org/changeset/263323
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 402411
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug