RecoveryOS: PAL::getAVPlayerLayerClass() will crash when AVFoundation is missing https://bugs.webkit.org/show_bug.cgi?id=213437 <rdar://problem/64563064>

Reviewed by Eric Carlson.

Check PAL::isAVFoundationAvailable() before calling PAL::getAVPlayerLayerClass();

Source/WebCore:

* platform/graphics/avfoundation/objc/VideoLayerManagerObjC.mm:
(WebCore::VideoLayerManagerObjC::setVideoLayer):
* platform/graphics/ca/cocoa/PlatformCALayerCocoa.mm:
(WebCore::PlatformCALayerCocoa::layerTypeForPlatformLayer):
(WebCore::PlatformCALayerCocoa::PlatformCALayerCocoa):
(WebCore::PlatformCALayerCocoa::clone const):
(WebCore::PlatformCALayerCocoa::avPlayerLayer const):

Source/WebKit:

* WebProcess/WebPage/RemoteLayerTree/PlatformCALayerRemoteCustom.mm:
(WebKit::PlatformCALayerRemoteCustom::clone const):


Canonical link: https://commits.webkit.org/226229@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263323 268f45cc-cd09-0410-ab3c-d52691b4dbfc